@@ -4,7 +4,7 @@ figuresdir = $(clutter_docdir)/tutorial/figures
 
 figures_DATA = actors.png actor_events.png actor_transformations.png \
                behaviours.png custom_actor.png full_example.png effects.png stage.png \
-               stage_widget.png timeline.png
+               stage_widget.png score.png timeline.png 
 
 EXTRA_DIST = $(figures_DATA)
 
